fix: changed heading size, gaps and widths in desktop view

--- a/newbie/stats-preview-card-component/style.css
+++ b/newbie/stats-preview-card-component/style.css
@@ -5,7 +5,7 @@
   --accent-color: hsl(277, 64%, 61%);
   --text-color: hsla(0, 0%, 100%, 0.75);
   --stat-headings: hsla(0, 0%, 100%, 0.6);
-  --overlay-color: hsla(277, 79%, 24%, 0.55);
+  --overlay-color: hsla(276, 77%, 34%, 0.425);
   --white: hsl(0, 0%, 100%);
 
   /* Fonts */
@@ -64,6 +64,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: var(--overlay-color);
+  backdrop-filter: brightness(0.7);
 }
 
 .card-content {
@@ -115,7 +116,7 @@ body {
 @media screen and (min-width: 900px) {
   .stats-card {
     grid-template-columns: 50% 50%;
-    width: min(90%, 55rem);
+    width: 70rem;
     height: fit-content;
   }
 
@@ -129,14 +130,16 @@ body {
   .card-content {
     grid-column: 1/2;
     align-items: start;
-    padding: 3rem;
-    gap: 4rem;
+    padding: 4rem;
+    gap: 4.5rem;
     justify-items: start;
 
     & .card-title {
       text-align: start;
+      font-size: 2.5rem;
     }
     & .card-desc {
+      width: 22.75rem;
       text-align: start;
     }
   }
